@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - now checking for keyword collisions in custom vocabulary classes
+          - now using builtin booleans when available (requires perl 5.36 and
+            Cpanel::JSON::XS 4.38)
 
 0.612     2025-06-03 22:50:17Z
           - additional diagnostics to track down some edge case failures
